Added comments and fixed some email stuff